tests/fiaas_deploy_daemon/e2e_expected/multiple_hosts_multiple_paths-ingress.yml

# Copyright 2017-2019 The FIAAS Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    fiaas/expose: "true"
  labels:
    app: v3-data-examples-multiple-hosts-multiple-paths
    fiaas/deployed_by: ""
    fiaas/deployment_id: DEPLOYMENT_ID
    fiaas/version: VERSION
  name: v3-data-examples-multiple-hosts-multiple-paths
  namespace: default
  ownerReferences:
    - apiVersion: fiaas.schibsted.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Application
      name: v3-data-examples-multiple-hosts-multiple-paths
  finalizers: []
spec:
  tls: []
  rules:
  - host: foo.example.com
    http:
      paths:
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /1noport
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /1portname
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /1portnumber
  - host: bar.example.com
    http:
      paths:
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /2noport
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /2portname
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /2portnumber
  - host: v3-data-examples-multiple-hosts-multiple-paths.svc.test.example.com
    http:
      paths:
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /0noport
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /0portname
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /0portnumber
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /1noport
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /1portname
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /1portnumber
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /2noport
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /2portname
      - backend:
          serviceName: v3-data-examples-multiple-hosts-multiple-paths
          servicePort: '80'
        path: /2portnumber
